--- a/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
+++ b/client/app/medicalDocuments/controllers/medicalDocumentInfo.html
@@ -2,8 +2,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
-                <h3>Medical Document Management</h3>
-                <br/>
+                <div class="font-medium font-size16 m-t-xs m-b-sm">Medical Document Management</div>
                 <p>Choose to upload your electronic Medical Documents. Or you may enter your medical information manually.</p>
             </div>
         </div>
@@ -15,7 +14,7 @@
                 <p>
                     If you have electronic versions of your Medical Records, you may upload them here.
                 </p>
-                <p>
+                <p class="m-b-md">
                     <a class="btn btn-primary dark-green" ui-sref="fe.medicaldocuments.upload">
                         Upload Medical Documents
                     </a>
@@ -23,7 +22,7 @@
                 <p class="m-t">
                     If you do not have an existing electronic Medical Record, you may manually enter your medical information here.
                 </p>
-                <p>
+                <p class="m-b-md">
                     <a class="btn btn-primary dark-green" disabled>
                         Manually Enter Medical Documents
                     </a>
