--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -39,7 +39,7 @@
                                             ng-click="uploadedDocumentVm.uploadDocumentToHIE(medicalDocument)">
                                         <span class="fa fa-upload m-r-xs"></span>Publish
                                     </button>
-                                    <button type="button" class="btn btn-default btn-xs m-r-sm"
+                                    <button type="button" class="btn btn-default btn-outline btn-xs m-r-sm"
                                             ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
                                         <span class="fa fa-download m-r-xs"></span>Download
                                     </button>
