--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -1,6 +1,6 @@
 ﻿<div class="container-fluid left-right-padding-0">
     <div class="page-bg-white" id="topPage">
-        <div class="mediumgray-bg">
+        <div class="b9gray-bg">
             <div class="custom-header modified">
                 <div class="row">
                     <div class="col-sm-12">
@@ -107,7 +107,8 @@
                         </p>
                         <h4>How to Navigate Your <span ng-bind="loginVm.brandName"></span>?</h4>
                         <p>
-                            This brief presentation will demonstrate how to log in and navigate through your <span ng-bind="loginVm.brandName"></span> account, view your health records, manage your prescriptions, add health information, review reminders, access health education materials, and more.<br><br><a href="#ppTop" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('topPage')">Back to Top</a>
+                            This brief presentation will demonstrate how to log in and navigate through your <span ng-bind="loginVm.brandName"></span> account, view your health records, manage your prescriptions, add health information, review reminders, access health education materials, and more.
+                            <br><br><a href="#ppTop" class="btn btn-xs btn-primary dark-green" ng-click="loginVm.scrollTo('topPage')">Back to Top</a>
                         </p>
                    </div>
                  </div>
