--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-12">
-        <div class="row">
+        <div class="row m-b-md">
             <div class="col-sm-12">
                 <h2 class="m-t-none"><strong>Consent to Share My Medical Information</strong></h2>
                 <div class="">
@@ -17,71 +17,86 @@
                 <strong ng-bind="consentESignatureVm.attestation.patientDateOfBirth"></strong>
             </div>
         </div>
-        <br/>
+
+<!-- START CONSTRUCTION -->
         <div class="row">
             <div class="col-sm-12">
                 <div class="alert alert-info navbar-blue p-xs"><strong>AUTHORIZATION TO DISCLOSE</strong></div>
-                <p><strong>Authorizes:</strong></p>
-                <div class="row">
-                    <div class="col-sm-3">
-                        <p>Provider Name</p>
-                        <p ><strong ng-bind="consentESignatureVm.authorizeProvider | fullName"></strong></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p>NPI Number</p>
-                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider.npi"></strong></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p>Address</p>
-                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider | address"></strong></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p>Phone</p>
-                        <p > <strong ng-bind="consentESignatureVm.authorizeProvider.practiceLocationAddressTelephoneNumber | phone"></strong></p>
-                    </div>
-                </div>
-                <br/>
-                <p><strong>To disclose to:</strong></p>
-                <div class="row">
-                    <div class="col-sm-3">
-                        <p>Provider Name</p>
-                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider | fullName"></strong></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p>NPI Number</p>
-                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider.npi"></strong></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p>Address</p>
-                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider | address"></strong></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <p>Phone</p>
-                        <p > <strong ng-bind="consentESignatureVm.disclosureProvider.practiceLocationAddressTelephoneNumber | phone"></strong></p>
-                    </div>
-                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="font-size16 text-navy-blue bold">Authorizes:</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <p class="m-b-xs">Provider Name</p>
+                <p ><strong ng-bind="consentESignatureVm.authorizeProvider | fullName"></strong></p>
+            </div>
+            <div class="col-sm-3">
+                <p class="m-b-xs">NPI Number</p>
+                <p > <strong ng-bind="consentESignatureVm.authorizeProvider.npi"></strong></p>
+            </div>
+            <div class="col-sm-3">
+                <p class="m-b-xs">Address</p>
+                <p > <strong ng-bind="consentESignatureVm.authorizeProvider | address"></strong></p>
+            </div>
+            <div class="col-sm-3">
+                <p class="m-b-xs">Phone</p>
+                <p > <strong ng-bind="consentESignatureVm.authorizeProvider.practiceLocationAddressTelephoneNumber | phone"></strong></p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-sm-12">
+                <p class="font-size16 text-navy-blue bold">To disclose to:</p>
+            </div>
+        </div>
+
+        <div class="row m-b">
+            <div class="col-sm-3">
+                <p class="m-b-xs">Provider Name</p>
+                <p > <strong ng-bind="consentESignatureVm.disclosureProvider | fullName"></strong></p>
+            </div>
+            <div class="col-sm-3">
+                <p class="m-b-xs">NPI Number</p>
+                <p > <strong ng-bind="consentESignatureVm.disclosureProvider.npi"></strong></p>
+            </div>
+            <div class="col-sm-3">
+                <p class="m-b-xs">Address</p>
+                <p > <strong ng-bind="consentESignatureVm.disclosureProvider | address"></strong></p>
+            </div>
+            <div class="col-sm-3">
+                <p class="m-b-xs">Phone</p>
+                <p > <strong ng-bind="consentESignatureVm.disclosureProvider.practiceLocationAddressTelephoneNumber | phone"></strong></p>
+            </div>
+        </div>
+
+<!-- END CONSTRUCTION -->
+<!-- NEW CONSTRUCTION -->
+        <div class="row">
+            <div class="col-sm-12">
                 <div class="alert alert-info navbar-blue p-xs"><strong>HEALTH INFORMATION TO BE DISCLOSED</strong></div>
-                <div class="col-sm-6">
-                    <h4> <strong>To SHARE the following medical information:</strong></h4>
-                    <strong>Sensitivity Categories:</strong> <span ng-if="!consentESignatureVm.hasSensitiveCategoriesToDisplay()">None</span>
-                    <ul>
-                        <li ng-repeat="category in consentESignatureVm.attestation.doNotShareSensitivityPolicyDisplayNames"> <span ng-bind="category"></span></li>
-                    </ul>
-                </div>
-                <div class="col-sm-6">
-                    <h4><strong>To SHARE for the following purpose(s):</strong></h4>
-                    <ul>
-                        <li ng-repeat="purposeOfUse in consentESignatureVm.attestation.purposeOfUseCodes"> <span ng-bind="purposeOfUse.displayName"></span></li>
-                    </ul>
-                </div>
             </div>
         </div>
         <div class="row">
+            <div class="col-sm-6">
+                <div class="text-navy-blue font-medium font-size16 m-t-xs m-b-xs">To SHARE the following medical information:</div>
+                <strong>Sensitivity Categories:</strong> <span ng-if="!consentESignatureVm.hasSensitiveCategoriesToDisplay()">None</span>
+                <ul>
+                    <li ng-repeat="category in consentESignatureVm.attestation.doNotShareSensitivityPolicyDisplayNames"> <span ng-bind="category"></span></li>
+                </ul>
+            </div>
+            <div class="col-sm-6">
+                <div class="text-navy-blue font-medium font-size16 m-t-xs m-b-xs"><strong>To SHARE for the following purpose(s):</strong></div>
+                <ul>
+                    <li ng-repeat="purposeOfUse in consentESignatureVm.attestation.purposeOfUseCodes"> <span ng-bind="purposeOfUse.displayName"></span></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="row m-t">
             <div class="col-sm-12">
                 <div class="alert alert-info navbar-blue p-xs"><strong>CONSENT TERMS</strong></div>
                 <p ng-bind-html="consentESignatureVm.termsWithUserName"></p>
@@ -95,16 +110,24 @@
                 <strong ng-bind="consentESignatureVm.attestation.consentEnd | date: 'MM/dd/yyyy' "></strong>
             </div>
         </div>
-        <br/>
-        <div>
-            <input type="checkbox" pp-icheck ng-model="consentESignatureVm.attestation.acceptTerms" ng-change="consentESignatureVm.onchecked()">
-            <span>I, <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
+
+        <div class="row m-t m-b-sm">
+            <div class="col-sm-12">
+                <div class="checkbox">
+                    <label for="acceptConsent" class="p-none">
+                        <input id="acceptConsent" type="checkbox" pp-icheck ng-model="consentESignatureVm.attestation.acceptTerms" ng-change="consentESignatureVm.onchecked()">
+                        <span class="m-l-xs">I, <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
+                    </label>
+                </div>
+            </div>
         </div>
+
     </div>
-    <div class="row m-b-md">
-        <div class="col-md-12">
+<!-- END NEW CONSTRUCTION -->
+    <div class="col-sm-12 m-b-md">
+        <div class="m-r">
             <div class="pull-right">
-                <button class="btn btn-white m-r" ui-sref="fe.consent.list">Cancel</button>
+                <button class="btn btn-white m-r" type="button" ui-sref="fe.consent.list">Cancel</button>
                 <button class="btn btn-primary dark-green" type="submit" ng-disabled="!consentESignatureVm.isAuthenticated" ng-click="consentESignatureVm.onCompleteAttestation()">Complete</button>
             </div>
         </div>
