--- a/client/app/consent/directives/consentTryPolicyDropdown.html
+++ b/client/app/consent/directives/consentTryPolicyDropdown.html
@@ -1,15 +1,17 @@
 <div ng-if="tryPolicyDropdownVm.option === 'tryMyPolicy'">
     <div class="form-horizontal">
-        <div class="form-group m-b-xs"><label class="col-sm-3 control-label">Document</label>
+        <div class="form-group m-b-xs">
+            <label for="document" class="col-sm-3 control-label">Document</label>
             <div class="col-sm-9">
-                <select class="form-control m-b" name="account" ng-model="tryPolicyDropdownVm.documentid">
+                <select id="document" class="form-control m-b" name="account" ng-model="tryPolicyDropdownVm.documentid">
                     <option ng-repeat="document in tryPolicyDropdownVm.medicaldocuments" value="{{document.id}}">{{document.name}}</option>
                 </select>
             </div>
         </div>
-        <div class="form-group"><label class="col-sm-3 control-label">Purpose of Use</label>
+        <div class="form-group">
+            <label for="purposeOfUse" class="col-sm-3 control-label">Purpose of Use</label>
             <div class="col-sm-9">
-                <select class="form-control m-b" name="account" ng-model="tryPolicyDropdownVm.purposeofusecode" >
+                <select id="purposeOfUse" class="form-control m-b" name="account" ng-model="tryPolicyDropdownVm.purposeofusecode" >
                     <option ng-repeat="purposeOfUse in tryPolicyDropdownVm.shareforpurposeofuse" value="{{purposeOfUse.code}}">{{purposeOfUse.displayName}}</option>
                 </select>
             </div>
