--- a/client/app/consent/directives/consentListManageOptionsModalSigned.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSigned.html
@@ -9,7 +9,7 @@
                 <a href="" class="list-group-item" ng-click="manageConsentModalVm.downloadAttestedConsent('signed')"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Attested Consent</h4></a>
                 <a href="" class="list-group-item" ng-click="manageConsentModalVm.exportConsentDirective()"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export Consent Directive</button></h4></a>
                 <a href="" class="list-group-item" ng-click="manageConsentModalVm.setOption('tryMyPolicy')"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
-                <a href="" class="list-group-item" ng-click="manageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
+                <a href="" class="list-group-item" ng-click="manageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Revoke</h4></a>
             </div>
         </div>
         <pp-consent-try-policy-dropdown
