--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="m-t-none"><strong>Revoke of Consent to Participate in Health Information Exchange</strong></h2>
+                <h2 class="m-t-none"><strong>Revocation of Consent to Participate in Health Information Exchange</strong></h2>
                 <div class="">
                     <p class="m-b-xxs">Consent Reference Number:</p>
                     <p><strong ng-bind="consentRevokeVm.revokeAttestation.consentReferenceId"></strong></p>
