--- a/client/app/activity/controllers/activityHistory.html
+++ b/client/app/activity/controllers/activityHistory.html
@@ -1,3 +1,3 @@
 <pp-content-wrapper contenttitle="Activity History">
-    <pp-activity activities-data="activityHistoryVm.paginationData"></pp-activity>
+    <c2s-activity activities-data="activityHistoryVm.paginationData"></c2s-activity>
 </pp-content-wrapper>
