Change pp prefix to c2s in content-wrapper directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/controllers/consentCreateEdit.html
+++ b/client/app/consent/controllers/consentCreateEdit.html
@@ -1,8 +1,7 @@
-
-<pp-content-wrapper contenttitle="Create Consent">
+<c2s-content-wrapper contenttitle="Create Consent">
         <pp-consent-create
                 providers="consentCreateEditVm.providers"
                 purposeofuse="consentCreateEditVm.purposeOfUse"
                 sensitivitypolicies="consentCreateEditVm.sensitivityPolicies"
                 consent="consentCreateEditVm.consent"></pp-consent-create>
-</pp-content-wrapper>
+</c2s-content-wrapper>
