--- a/client/app/consent/controllers/consentESignature.html
+++ b/client/app/consent/controllers/consentESignature.html
@@ -1,9 +1,6 @@
-<pp-content-wrapper contenttitle="eSignature">
+<c2s-content-wrapper contenttitle="eSignature">
     <pp-consent-e-signature attestation="consentESignatureVm.attestation"></pp-consent-e-signature>
-</pp-content-wrapper>
-
-
-
+</c2s-content-wrapper>
 
 
 
