--- a/client/app/consent/controllers/consentRevoke.html
+++ b/client/app/consent/controllers/consentRevoke.html
@@ -1,3 +1,3 @@
-<pp-content-wrapper contenttitle="Revoke Consent">
+<c2s-content-wrapper contenttitle="Revoke Consent">
     <pp-consent-revoke></pp-consent-revoke>
-</pp-content-wrapper>
+</c2s-content-wrapper>
