--- a/client/app/consent/controllers/consentSignRevoke.html
+++ b/client/app/consent/controllers/consentSignRevoke.html
@@ -1,16 +1,12 @@
-<pp-content-wrapper contenttitle="Sign Revoke Consent">
-
+<c2s-content-wrapper contenttitle="Sign Revoke Consent">
     <div ng-bind-html="consentSignRevokeVm.javascriptCode |trustAsHTML" style="height: 600px"/>
-
     <div class= "navbar navbar-inverse navbar-fixed-bottom">
         <div class="container">
             <p class="navbar-text pull-left">If you have finished signing this Consent or wish to cancel, please click the Close button to exit this window.</p>
             <button type="button" class= "navbar-btn btn btn-primary pull-right" ng-click="consentSignRevokeVm.close()">Close</button>
         </div>
     </div>
-</pp-content-wrapper>
-
-
+</c2s-content-wrapper>
 
 
 
