--- a/client/app/provider/controllers/provider-list.html
+++ b/client/app/provider/controllers/provider-list.html
@@ -1,4 +1,4 @@
-<pp-content-wrapper contenttitle="List Providers">
+<c2s-content-wrapper contenttitle="List Providers">
 
     <div class="row">
         <div class="col-sm-12">
@@ -64,5 +64,4 @@
             </div>
         </div>
     </div>
-
-</pp-content-wrapper>
+</c2s-content-wrapper>
