--- a/client/app/consent/controllers/consentList.html
+++ b/client/app/consent/controllers/consentList.html
@@ -1,3 +1,3 @@
-<pp-content-wrapper contenttitle="List Consents">
+<c2s-content-wrapper contenttitle="List Consents">
     <pp-consent-card-list consent-list="consentListVm.consentList"></pp-consent-card-list>
-</pp-content-wrapper>
+</c2s-content-wrapper>
