--- a/client/app/provider/controllers/provider-lookup.html
+++ b/client/app/provider/controllers/provider-lookup.html
@@ -1,3 +1,3 @@
-<pp-content-wrapper contenttitle="Search Providers">
+<c2s-content-wrapper contenttitle="Search Providers">
     <provider-lookup-search></provider-lookup-search>
-</pp-content-wrapper>
+</c2s-content-wrapper>
