--- a/client/app/consent/directives/consentTerm.html
+++ b/client/app/consent/directives/consentTerm.html
@@ -5,8 +5,7 @@
         </div>
         <div class="panel-body">
             <p>Enter a start and end date during wich your medical records will be shared.</p>
-
-            <pp-datepicker-range class="input-daterange"  ng-model="consentTermVm.daterange" fromlabel="Consent Start" tolabel="Consent End"></pp-datepicker-range>
+            <c2s-datepicker-range class="input-daterange"  ng-model="consentTermVm.daterange" fromlabel="Consent Start" tolabel="Consent End"></c2s-datepicker-range>
         </div>
     </div>
 </div>
