Change pp prefix to c2s in Icheck directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/directives/categoryList.html
+++ b/client/app/consent/directives/categoryList.html
@@ -1,6 +1,6 @@
 <div class="radio">
     <label>
-        <input type="checkbox" pp-icheck
+        <input type="checkbox" c2s-icheck
                checklist-model="bindModel"
                checklist-value="bindObj.code">
         <span class="m-l-xs" ng-bind="bindObj.displayName"></span>
