--- a/client/app/consent/directives/consentESignature.html
+++ b/client/app/consent/directives/consentESignature.html
@@ -115,7 +115,7 @@
             <div class="col-sm-12">
                 <div class="checkbox">
                     <label for="acceptConsent" class="p-none">
-                        <input id="acceptConsent" type="checkbox" pp-icheck ng-model="consentESignatureVm.attestation.acceptTerms" ng-change="consentESignatureVm.onchecked()">
+                        <input id="acceptConsent" type="checkbox" c2s-icheck ng-model="consentESignatureVm.attestation.acceptTerms" ng-change="consentESignatureVm.onchecked()">
                         <span class="m-l-xs">I, <strong ng-bind="consentESignatureVm.attestation | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
                     </label>
                 </div>
