--- a/client/app/consent/directives/consentRevokeConfirmation.html
+++ b/client/app/consent/directives/consentRevokeConfirmation.html
@@ -27,7 +27,7 @@
 
         <br/>
         <div>
-            <input type="checkbox" pp-icheck ng-model="consentRevokeVm.revokeAttestation.acceptTerms" ng-change="consentRevokeVm.onchecked()">
+            <input type="checkbox" c2s-icheck ng-model="consentRevokeVm.revokeAttestation.acceptTerms" ng-change="consentRevokeVm.onchecked()">
             <span>I, <strong ng-bind="consentRevokeVm.revokeAttestation.patient | fullName"></strong>, hereby accept, and understand the terms of this consent.</span>
         </div>
     </div>
