--- a/client/app/consent/directives/consentProviderSelectModal.html
+++ b/client/app/consent/directives/consentProviderSelectModal.html
@@ -14,7 +14,7 @@
                                 <div ng-if="selectProviderModalVm.isIndividualProvider(provider)">
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" pp-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
+                                            <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
                                                 <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"> </span>
                                         </label>
                                     </div>
@@ -29,7 +29,7 @@
                             <div ng-if="selectProviderModalVm.isOrganizationProvider(provider)">
                                 <div class="radio">
                                     <label>
-                                        <input type="radio" pp-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
+                                        <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
                                         <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"></span>
                                     </label>
                                 </div>
