--- a/client/app/medicalDocuments/directives/medicalDocumentUpload.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUpload.html
@@ -36,8 +36,8 @@
 
                 <div class="form-group">
                     <label for="file">Medical Document</label>
-                    <input type="file" name="file" id="file" accept=".xml" file-validate
-                           ng-model="medicalDocumentsUploadVm.file" file-model="medicalDocumentsUploadVm.medicalFile"  ng-pattern="medicalDocumentsUploadVm.extension" required/>
+                    <input type="file" name="file" id="file" accept=".xml" c2s-file-validate
+                           ng-model="medicalDocumentsUploadVm.file" c2s-file-model="medicalDocumentsUploadVm.medicalFile"  ng-pattern="medicalDocumentsUploadVm.extension" required/>
                     <div ng-messages="medicalDocumentUploadForm.file.$error"
                          class="text-alert" role="alert">
                         <div class="m-t-xs" ng-message="pattern" >Only .xml files are permitted.</div>
