Add prefix c2s in provider module
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/provider/directives/provider-lookup-search.html
+++ b/client/app/provider/directives/provider-lookup-search.html
@@ -269,13 +269,7 @@
         </div>
     </div>
 
-    <!--<div>
-        <pre>
-            {{providerSearchForm | json}}
-        </pre>
-    </div>-->
-
-    <provider-lookup-result ng-if="providerLookupSearchVm.providerLookupResult"
+    <c2s-provider-lookup-result ng-if="providerLookupSearchVm.providerLookupResult"
                             provider-lookup-result="providerLookupSearchVm.providerLookupResult"
-                            query-parameters="providerLookupSearchVm.plsQueryParameters"></provider-lookup-result>
+                            query-parameters="providerLookupSearchVm.plsQueryParameters"></c2s-provider-lookup-result>
 </div>
