--- a/client/app/provider/controllers/provider-lookup.html
+++ b/client/app/provider/controllers/provider-lookup.html
@@ -1,3 +1,3 @@
 <c2s-content-wrapper contenttitle="Search Providers">
-    <provider-lookup-search></provider-lookup-search>
+    <c2s-provider-lookup-search></c2s-provider-lookup-search>
 </c2s-content-wrapper>
