Correct the nomenclature to change Attested to Signed
#10747 - As a developer, I will have addressed UI nomenclature naming issues

--- a/client/app/consent/directives/consentRevocationPreviewAttestationModal.html
+++ b/client/app/consent/directives/consentRevocationPreviewAttestationModal.html
@@ -7,7 +7,7 @@
             <div class="col-sm-12 center">
                 <span>
                     <button class="btn btn-primary dark-green" ng-click="attestedConsentRevocationModalVm.downloadAttestedConsentRevocationAndRedirectToConsentList()">
-                        Download Attested Consent Revocation
+                        Download Signed Consent Revocation
                     </button>
                 </span>
                 <span>
