--- a/client/app/provider/directives/provider-lookup-search.html
+++ b/client/app/provider/directives/provider-lookup-search.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="alert alert-info">
-                                    <span class="btn btn-success btn-circle bg-color-blue">1</span>&nbsp;<b>Step 1.</b>
+                                    <span class="badge btn-success btn-circle bg-color-blue m-r-xs">1</span>&nbsp;<b>Step 1.</b>
                                     Please enter
                                     the
                                     provider <b>State and City</b> OR <b>Zip Code</b>.
@@ -101,7 +101,7 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="alert alert-info">
-                                    <span class="btn btn-success bg-color-blue btn-circle">2</span>&nbsp;<b>Step 2.</b>
+                                    <span class="badge btn-success bg-color-blue btn-circle m-r-xs">2</span>&nbsp;<b>Step 2.</b>
                                     Please enter
                                     the
                                     <b>Facility Name</b> OR <b>Provider Name and
