Change pp prefix to c2s in healthInformation module
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/healthInformation/controllers/healthInformation.html
+++ b/client/app/healthInformation/controllers/healthInformation.html
@@ -15,7 +15,7 @@
 
 <div class="wrapper wrapper-content animated fadeInRight top-padding10">
     <div ng-repeat="document in healthInformationVm.documents" >
-        <pp-ccda-document document="document" ></pp-ccda-document>
+        <c2s-ccda-document document="document" ></c2s-ccda-document>
     </div>
     <div ng-show="healthInformationVm.noDocumentFound">
         <div class="alert alert-warning alert-dismissible" role="alert">
