Change pp prefix to c2s in IboxTools directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/directives/consentMedicalInformationModal.html
+++ b/client/app/consent/directives/consentMedicalInformationModal.html
@@ -8,7 +8,7 @@
                 <div class="ibox float-e-margins">
                     <div class="ibox-title">
                         <h5>Sensitive Information Categories</h5>
-                        <div pp-ibox-tools></div>
+                        <div c2s-ibox-tools></div>
                     </div>
                     <div class="ibox-content">
                         <div class="alert alert-warning">
