--- a/client/app/healthInformation/directives/ccdaDocumentSection.html
+++ b/client/app/healthInformation/directives/ccdaDocumentSection.html
@@ -5,7 +5,7 @@
                 <h5>
                     <span ng-bind-html="ccdaDocumentSectionVm.section.title | trustAsHTML"></span>
                 </h5>
-                <div pp-ibox-tools></div>
+                <div c2s-ibox-tools></div>
             </div>
             <div class="ibox-content">
                 <div class="healthInfo">
