--- a/client/app/provider/controllers/provider-list.html
+++ b/client/app/provider/controllers/provider-list.html
@@ -17,7 +17,7 @@
                 <div class="ibox-title">
                     <h2>Current Healthcare Providers</h2>
 
-                    <div pp-ibox-tools></div>
+                    <div c2s-ibox-tools></div>
                 </div>
                 <div class="ibox-content">
 
