--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -3,11 +3,10 @@
         <div class="ibox panel panel-navbar-blueGray float-e-margins">
             <div class="ibox-title modified panel-heading right-padding30" ng-click="consentCardVm.toggleCollapse()">
                 <div class="chevron_absolute">
-                    <div pp-ibox-tools pp-collapsed="consentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
+                    <div c2s-ibox-tools pp-collapsed="consentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
                 </div>
 
                 <div class="row">
-                    <!--<div pp-ibox-tools init-collapsed="true"></div>-->
                     <div class="col-sm-4 col-sm-push-8 col-xs-12">
                         <p class="">Effective Dates: <strong><span ng-bind="(consentCardVm.consent.consentStart | date) + ' - ' + (consentCardVm.consent.consentEnd | date)"/></strong>
                         </p>
