--- a/client/app/healthInformation/directives/ccdaDocument.html
+++ b/client/app/healthInformation/directives/ccdaDocument.html
@@ -15,7 +15,7 @@
                     </div>
 
                     <div class="chevron_absolute">
-                        <div pp-ibox-tools class="white"  total=""></div>
+                        <div c2s-ibox-tools class="white"  total=""></div>
                     </div>
                 </div>
             </div>
