--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title pp-page-title>C2S | Patient Portal</title>
+    <title c2s-page-title>C2S | Patient Portal</title>
 
     <base href="/pp-ui/">
 
