Change pp prefix to c2s in consentTerm directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/directives/consentCreateEdit.html
+++ b/client/app/consent/directives/consentCreateEdit.html
@@ -27,7 +27,7 @@
             <div class="hr-line-dashed"></div>
             <div class="row">
                 <div class="col-md-11">
-                    <pp-consent-term ng-model="consentCreateVm.dateRange" name="dateRange" ></pp-consent-term>
+                    <c2s-consent-term ng-model="consentCreateVm.dateRange" name="dateRange" ></c2s-consent-term>
                 </div>
             </div>
             <div class="hr-line-dashed"></div>
