--- a/client/app/consent/controllers/consentRevoke.html
+++ b/client/app/consent/controllers/consentRevoke.html
@@ -1,3 +1,3 @@
 <c2s-content-wrapper contenttitle="Revoke Consent">
-    <pp-consent-revoke></pp-consent-revoke>
+    <c2s-consent-revoke></c2s-consent-revoke>
 </c2s-content-wrapper>
