Change pp prefix to c2s in ConsentESignature directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/controllers/consentESignature.html
+++ b/client/app/consent/controllers/consentESignature.html
@@ -1,5 +1,5 @@
 <c2s-content-wrapper contenttitle="eSignature">
-    <pp-consent-e-signature attestation="consentESignatureVm.attestation"></pp-consent-e-signature>
+    <c2s-consent-e-signature attestation="consentESignatureVm.attestation"></c2s-consent-e-signature>
 </c2s-content-wrapper>
 
 
