Change pp prefix to c2s in ConsentModalHeader directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/directives/consentListManageOptionsModalSaved.html
+++ b/client/app/consent/directives/consentListManageOptionsModalSaved.html
@@ -1,7 +1,7 @@
 <div class="inmodal">
     <form name="consentOptionsForm">
         <div class="modal-header">
-            <pp-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></pp-consent-modal-header>
+            <c2s-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></c2s-consent-modal-header>
         </div>
         <div class="modal-body">
             <div ng-if="manageConsentModalVm.option === 'manageConcent'">
