--- a/client/app/consent/directives/consentListManageOptionsModalError.html
+++ b/client/app/consent/directives/consentListManageOptionsModalError.html
@@ -1,6 +1,6 @@
 <div class="inmodal">
     <div class="modal-header">
-        <pp-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></pp-consent-modal-header>
+        <c2s-consent-modal-header option="manageConsentModalVm.option" cancel="manageConsentModalVm.cancel()"></c2s-consent-modal-header>
     </div>
     <div class="modal-body">
         <div class="alert alert-danger"><strong>ERROR:</strong> Invalid consent state. Please contact to system administrator.</div>
