Change pp prefix to c2s in ConsentCreate directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/controllers/consentCreateEdit.html
+++ b/client/app/consent/controllers/consentCreateEdit.html
@@ -1,7 +1,7 @@
 <c2s-content-wrapper contenttitle="Create Consent">
-        <pp-consent-create
-                providers="consentCreateEditVm.providers"
-                purposeofuse="consentCreateEditVm.purposeOfUse"
-                sensitivitypolicies="consentCreateEditVm.sensitivityPolicies"
-                consent="consentCreateEditVm.consent"></pp-consent-create>
+    <c2s-consent-create
+            providers="consentCreateEditVm.providers"
+            purposeofuse="consentCreateEditVm.purposeOfUse"
+            sensitivitypolicies="consentCreateEditVm.sensitivityPolicies"
+            consent="consentCreateEditVm.consent"></c2s-consent-create>
 </c2s-content-wrapper>
