--- a/client/app/consent/controllers/consentList.html
+++ b/client/app/consent/controllers/consentList.html
@@ -1,3 +1,3 @@
 <c2s-content-wrapper contenttitle="List Consents">
-    <pp-consent-card-list consent-list="consentListVm.consentList"></pp-consent-card-list>
+    <c2s-consent-card-list consent-list="consentListVm.consentList"></c2s-consent-card-list>
 </c2s-content-wrapper>
