Change pp prefix to c2s in IboxTools directive
#10703 - As a developer, I will complete rebranding changes in code (front-end code)

--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -3,7 +3,7 @@
         <div class="ibox panel panel-navbar-blueGray float-e-margins">
             <div class="ibox-title modified panel-heading right-padding30" ng-click="consentCardVm.toggleCollapse()">
                 <div class="chevron_absolute">
-                    <div c2s-ibox-tools pp-collapsed="consentCardVm.collapsed" pp-chevron-prevent-default="true"></div>
+                    <div c2s-ibox-tools c2s-collapsed="consentCardVm.collapsed" c2s-chevron-prevent-default="true"></div>
                 </div>
 
                 <div class="row">
