--- a/client/app/consent/directives/consentProviderSelectModal.html
+++ b/client/app/consent/directives/consentProviderSelectModal.html
@@ -13,8 +13,8 @@
                         <div ng-repeat="provider in selectProviderModalVm.providers">
                                 <div ng-if="selectProviderModalVm.isIndividualProvider(provider)">
                                     <div class="radio">
-                                        <label for="individual">
-                                            <input id="individual" type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
+                                        <label>
+                                            <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
                                                 <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"> </span>
                                         </label>
                                     </div>
@@ -28,8 +28,8 @@
                         <div ng-repeat="provider in selectProviderModalVm.providers">
                             <div ng-if="selectProviderModalVm.isOrganizationProvider(provider)">
                                 <div class="radio">
-                                    <label for="organization" >
-                                        <input id="organization" type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
+                                    <label>
+                                        <input type="radio" c2s-icheck ng-model="selectProviderModalVm.selectedProvider.npi"  ng-value="provider.npi" name="npi" ng-disabled="selectProviderModalVm.isSelected(provider.npi)" >
                                         <span class="m-l-xs" ng-bind="provider|pcmProviderNameOrFacility"></span>
                                     </label>
                                 </div>
