Format and clean up account module, build.config and .jshintrc.
#10926 - As a developer, I will have prepared admin-portal-ui,  patient-portal-ui code to make it more deployable by community member (HIE)

--- a/client/app/account/directives/createPassword.html
+++ b/client/app/account/directives/createPassword.html
@@ -16,7 +16,10 @@
                     <label class="control-label" for="user_name">Username</label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
-                            <input id="user_name" name="username" type="text" aria-required="true"
+                            <input id="user_name"
+                                   name="username"
+                                   type="text"
+                                   aria-required="true"
                                    class="form-control bold" placeholder="username"
                                    ng-model="createPasswordVm.username" readonly/>
                         </div>
@@ -33,13 +36,15 @@
                                 <span class="text-strong-blue absolute hidden-xs" style="top: 4px; right: 0px;">
                                     <c2s-popover popover-placement="right"
                                                  popover-title="createPasswordVm.popoverData.title"
-                                                 popover-content="createPasswordVm.popoverData"></c2s-popover>
+                                                 popover-content="createPasswordVm.popoverData">
+                                    </c2s-popover>
                                 </span>
 
                                 <span class="text-strong-blue absolute visible-xs" style="top: 4px; right: 24px;">
                                     <c2s-popover popover-placement="left"
                                                  popover-title="createPasswordVm.popoverData.title"
-                                                 popover-content="createPasswordVm.popoverData"></c2s-popover>
+                                                 popover-content="createPasswordVm.popoverData">
+                                    </c2s-popover>
                                 </span>
                             <div class="text-alert m-t-xs" ng-if="createPasswordForm.password.$dirty"
                                  ng-messages="createPasswordForm.password.$error">
@@ -52,10 +57,15 @@
                     <label for="reenterPassword">Re-enter Password</label>
                     <div class="row">
                         <div class="col-sm-6 col-md-5 col-lg-4">
-                            <input id="reenterPassword" type="password" class="form-control" name="confirmPassword"
-                                   placeholder="Confirm password" ng-model="createPasswordVm.patient.confirmPassword"
+                            <input id="reenterPassword"
+                                   type="password"
+                                   class="form-control"
+                                   name="confirmPassword"
+                                   placeholder="Confirm password"
+                                   ng-model="createPasswordVm.patient.confirmPassword"
                                    c2s-compare-to="createPasswordVm.patient.password" required>
-                            <div class="text-alert m-t-xs" ng-if="createPasswordForm.confirmPassword.$dirty"
+                            <div class="text-alert m-t-xs"
+                                 ng-if="createPasswordForm.confirmPassword.$dirty"
                                  ng-messages="createPasswordForm.confirmPassword.$error">
                                 <div ng-messages-include="activation-messages"></div>
                             </div>
