--- a/client/app/account/directives/verification.html
+++ b/client/app/account/directives/verification.html
@@ -12,11 +12,13 @@
                     <label for="birthdate">Date of Birth</label>
                     <div class="row">
                         <div class="col-xs-12">
-                            <c2s-multi-select-date id="birthdate" name="birthdate"
-                                                   year-order="desc" start-year="" end-year=""
-                                                   ng-model="verificationVm.verifyInfo.birthdate"
-                                                   c2s-check-after-today required
-                                                   c2s-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
+                            <c2s-multi-select-date
+                                   id="birthdate"
+                                   name="birthdate"
+                                   year-order="desc" start-year="" end-year=""
+                                   ng-model="verificationVm.verifyInfo.birthdate"
+                                   c2s-check-after-today required
+                                   c2s-outside-click="verificationVm.checkDateField(verificationForm.birthdate)">
                             </c2s-multi-select-date>
                             <div class="text-alert" ng-if="verificationForm.birthdate.$dirty"
                                  ng-messages="verificationForm.birthdate.$error">
