Format and clean up core, layout and account .
#10926 - As a developer, I will have prepared admin-portal-ui,  patient-portal-ui code to make it more deployable by community member (HIE)

--- a/client/app/core/directives/multiSelectDate.html
+++ b/client/app/core/directives/multiSelectDate.html
@@ -2,7 +2,9 @@
     <div class="col-xs-6 col-sm-3">
         <div class="form-group">
             <label>Month</label>
-            <select ng-model="date.month" ng-options="month.value as month.name for month in selects.months() track by month.value" class="form-control">
+            <select ng-model="date.month"
+                    ng-options="month.value as month.name for month in selects.months() track by month.value"
+                    class="form-control">
                 <option value="" disabled>Month</option>
             </select>
         </div>
