Format some module .
#10926 - As a developer, I will have prepared admin-portal-ui,  patient-portal-ui code to make it more deployable by community member (HIE)

--- a/client/app/account/controllers/forgotPassword.html
+++ b/client/app/account/controllers/forgotPassword.html
@@ -39,13 +39,15 @@
                             </div>
 
                             <div class="row">
-                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="forgotPasswordVm.emailPatternError">
+                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs"
+                                     ng-if="forgotPasswordVm.emailPatternError">
                                     <span>Please provide a valid email address.</span>
                                 </div>
                             </div>
 
                             <div class="row">
-                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs" ng-if="forgotPasswordVm.emailNotFound">
+                                <div class="col-sm-10 text-alert m-t-n-xs m-b-xs"
+                                     ng-if="forgotPasswordVm.emailNotFound">
                                     <span>The email address you have provided cannot be found, please try again.</span>
                                 </div>
                             </div>
