--- a/client/app/account/controllers/resetPasswordSuccess.html
+++ b/client/app/account/controllers/resetPasswordSuccess.html
@@ -6,7 +6,8 @@
             <div class="col-sm-offset-1 col-sm-10">
                 <h1>Reset Password Complete!</h1>
                 <div class="m-t-md">
-                    You have successfully submitted a request to create a new password. You will be receiving an email from us.
+                    You have successfully submitted a request to create a new password. You will be receiving an email
+                    from us.
                     <br>
                     <b>Please click on the link provided in the email.</b>
 
