Format some medical documents module.
#10926 - As a developer, I will have prepared admin-portal-ui,  patient-portal-ui code to make it more deployable by community member (HIE)

--- a/client/app/medicalDocuments/controllers/medicalDocument.html
+++ b/client/app/medicalDocuments/controllers/medicalDocument.html
@@ -1,6 +1,8 @@
 <c2s-content-wrapper contenttitle="Upload Medical Documents">
     <div class="row">
         <c2s-medical-documents-upload></c2s-medical-documents-upload>
-        <c2s-uploaded-documents medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList"></c2s-uploaded-documents>
+        <c2s-uploaded-documents
+                medicaldocumentslist="medicalDocumentsListVm.medicalDocumentsList">
+        </c2s-uploaded-documents>
     </div>
 </c2s-content-wrapper>
