--- a/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
+++ b/client/app/medicalDocuments/directives/medicalDocumentUploadedDocuments.html
@@ -35,15 +35,19 @@
                             <div class="row p-t-xs">
                                 <div class="col-sm-12">
 
-                                    <button type="button" class="btn btn-success dark-green btn-xs m-r-xs"
+                                    <button type="button"
+                                            class="btn btn-success dark-green btn-xs m-r-xs"
                                             ng-click="uploadedDocumentVm.uploadDocumentToHIE(medicalDocument)">
                                         <span class="fa fa-upload m-r-xs"></span>Publish
                                     </button>
-                                    <button type="button" class="btn btn-default btn-outline btn-xs m-r-sm"
+                                    <button type="button"
+                                            class="btn btn-default btn-outline btn-xs m-r-sm"
                                             ng-click="uploadedDocumentVm.downloadFile(medicalDocument)">
                                         <span class="fa fa-download m-r-xs"></span>Download
                                     </button>
-                                    <a href="" type="button" class="hover-extraBold"
+                                    <a href=""
+                                       type="button"
+                                       class="hover-extraBold"
                                        ng-click="uploadedDocumentVm.openDeleteMedicalDocumentModal(medicalDocument, 'sm')">
                                         <span class="fa fa-times m-r-xxs text-dark-red"></span> Remove
                                     </a>
